Path fixes for expand and collapse image

--- a/frappe/public/css/tree_grid.css
+++ b/frappe/public/css/tree_grid.css
@@ -13,9 +13,9 @@
 }
 
 .toggle.expand {
-	background: url("../lib/images/icons/expand.gif") no-repeat center center;
+	background: url("../frappe/js/lib/slickgrid/images/expand.gif") no-repeat center center;
 }
 
 .toggle.collapse {
-	background: url("../lib/images/icons/collapse.gif") no-repeat center center;
+	background: url("../frappe/js/lib/slickgrid/images/collapse.gif") no-repeat center center;
 }
